--- a/edit-personal-info.html
+++ b/edit-personal-info.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Add new card | Grocery mart</title>
+        <title>Edit personal info | Grocery mart</title>
 
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-touch-icon.png" />
@@ -58,7 +58,7 @@
                                     <h3 class="profile-menu__title">Manage Account</h3>
                                     <div class="profile-menu__list">
                                         <li>
-                                            <a href="./edit-personal-info.html" class="profile-menu__link">
+                                            <a href="#!" class="profile-menu__link">
                                                 <span class="profile-menu__icon">
                                                     <img src="./assets/icons/profile.svg" alt="" class="icon" />
                                                 </span>
@@ -162,128 +162,81 @@
                                             <a href="./profile.html">
                                                 <img src="./assets/icons/arrow-left.svg" alt="" class="cart-info__back-arrow icon" />
                                             </a>
-                                            Add credit or debit card
+                                            Personal info
                                         </h2>
                                         <form action="./profile.html" class="form form-card">
                                             <!-- Form row 1 -->
                                             <div class="form__row">
                                                 <div class="form__group">
-                                                    <label for="first-name" class="form__label form-card__label">First Name</label>
+                                                    <label for="full-name" class="form__label form-card__label">Full name</label>
                                                     <div class="form__text-input">
                                                         <input
                                                             type="text"
                                                             name=""
-                                                            id="first-name"
-                                                            placeholder="Imran"
+                                                            id="full-name"
+                                                            placeholder="Imran Khan"
                                                             class="form__input"
                                                             required
                                                             autofocus
                                                             minlength="6" />
                                                         <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                                                     </div>
-                                                    <p class="form__error">First name must be at least 6 characters</p>
+                                                    <p class="form__error">Full name must be at least 6 characters</p>
                                                 </div>
                                                 <div class="form__group">
-                                                    <label for="last-name" class="form__label form-card__label">Last Name</label>
+                                                    <label for="email-adress" class="form__label form-card__label">Email address</label>
                                                     <div class="form__text-input">
                                                         <input
                                                             type="text"
                                                             name=""
-                                                            id="last-name"
-                                                            placeholder="Khan"
+                                                            id="email-address"
+                                                            placeholder="admin@uihut.com"
                                                             class="form__input"
                                                             required
                                                             minlength="6" />
                                                         <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                                                     </div>
-                                                    <p class="form__error">Last Name must be at least 6 characters</p>
+                                                    <p class="form__error">Email address must be at least 6 characters</p>
                                                 </div>
                                             </div>
 
                                             <!-- Form row 2 -->
                                             <div class="form__row">
                                                 <div class="form__group">
-                                                    <label for="card-information" class="form__label form-card__label">Card Information</label>
-                                                    <div class="form__text-input">
-                                                        <input
-                                                            type="text"
-                                                            name=""
-                                                            id="card-information"
-                                                            placeholder="Card Number"
-                                                            class="form__input"
-                                                            required
-                                                            minlength="6" />
-                                                        <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
-                                                    </div>
-                                                    <p class="form__error">Card Information must be at least 6 characters</p>
-                                                </div>
-                                                <div class="form__group">
-                                                    <label for="expiration-data" class="form__label form-card__label">Expiration Data</label>
-                                                    <div class="form__text-input">
-                                                        <input
-                                                            type="text"
-                                                            name=""
-                                                            id="expiration-data"
-                                                            placeholder="MM/YY"
-                                                            class="form__input"
-                                                            required
-                                                            minlength="6" />
-                                                        <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
-                                                    </div>
-                                                    <p class="form__error">Expiration Data must be at least 6 characters</p>
-                                                </div>
-                                            </div>
-
-                                            <!-- Form row 3 -->
-                                            <div class="form__row">
-                                                <div class="form__group">
-                                                    <label for="cvv" class="form__label form-card__label">CVV</label>
-                                                    <div class="form__text-input">
-                                                        <input
-                                                            type="text"
-                                                            name=""
-                                                            id="cvv"
-                                                            placeholder="123"
-                                                            class="form__input"
-                                                            required
-                                                            minlength="6" />
-                                                        <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
-                                                    </div>
-                                                    <p class="form__error">CVV must be at least 6 characters</p>
-                                                </div>
-                                                <div class="form__group">
-                                                    <label for="phone-number" class="form__label form-card__label">Phone Number</label>
+                                                    <label for="phone-number" class="form__label form-card__label">Phone number</label>
                                                     <div class="form__text-input">
                                                         <input
                                                             type="text"
                                                             name=""
                                                             id="phone-number"
-                                                            placeholder="017"
+                                                            placeholder="+008 01234 56789"
                                                             class="form__input"
                                                             required
                                                             minlength="6" />
                                                         <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
                                                     </div>
-                                                    <p class="form__error">Phone Number must be at least 6 characters</p>
+                                                    <p class="form__error">Phone number must be at least 6 characters</p>
                                                 </div>
-                                            </div>
-
-                                            <div class="form__group">
-                                                <label for="set-default-card" class="form__label form-card__label">Card Preferences</label>
-                                                <label class="form__checkbox">
-                                                    <input
-                                                        type="checkbox"
-                                                        name=""
-                                                        id="set-default-card"
-                                                        checked
-                                                        class="form__checkbox-input d-none" />
-                                                    <span class="form__checkbox-label">Set as default card</span>
-                                                </label>
+                                                <div class="form__group">
+                                                    <label for="password" class="form__label form-card__label">Password</label>
+                                                    <div class="form__text-input">
+                                                        <input
+                                                            type="password"
+                                                            name=""
+                                                            id="password"
+                                                            placeholder="•••••••••"
+                                                            class="form__input"
+                                                            required
+                                                            minlength="6" />
+                                                        <img src="./assets/icons/form-error.svg" alt="" class="form__input-icon-error" />
+                                                    </div>
+                                                    <p class="form__error">Password must be at least 6 characters</p>
+                                                </div>
                                             </div>
 
                                             <div class="form-card__bottom">
                                                 <a href="./profile.html" class="btn btn--text">Cancel</a>
-                                                <button class="btn btn--primary btn--rounded">Save card</button>
+                                                <button class="btn btn--primary btn--rounded">Save</button>
                                             </div>
                                         </form>
                                     </div>
